--- a/index.html
+++ b/index.html
@@ -1,71 +1,136 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <!--
-Design by TEMPLATED
-http://templated.co
-Released for free under the Creative Commons Attribution License
+Design by JH, Templated(inspiration)
 
-Name       : FirstBase 
+Name       : 辰光灯箱广告制作公司 
 Description: A two-column, fixed-width design with dark color scheme.
 Version    : 1.0
-Released   : 20140404
 
---><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><title></title><meta name="keywords" content=""><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="description" content=""><link href="//fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet"><link href="default.css" rel="stylesheet" type="text/css" media="all"><link href="fonts.css" rel="stylesheet" type="text/css" media="all"><!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]--></head><body>
-<div id="header-wrapper">
-	<div id="header" class="container">
-		<div id="logo">
-			<h1><a href="#">FirstBase</a></h1>
-		</div>
-		<div id="menu">
-			<ul><li class="active"><a href="#" accesskey="1" title="">Homepage</a></li>
-				<li><a href="#" accesskey="2" title="">Our Clients</a></li>
-				<li><a href="#" accesskey="3" title="">About Us</a></li>
-				<li><a href="#" accesskey="4" title="">Careers</a></li>
-				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
-			</ul></div>
+-->
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>辰光灯箱广告制作公司</title>
+	<meta name="keywords" content="">
+	<meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+	<meta name="description" content="">
+	<link href="//fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
+	<link href="default.css" rel="stylesheet" type="text/css" media="all">
+	<link href="fonts.css" rel="stylesheet" type="text/css" media="all">
+	<!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
+	<div class="language-switcher">
+		<input type="checkbox" id="language-toggle">
+		<label for="language-toggle" class="slider"></label>
 	</div>
+</head>
 
-<div id="banner-wrapper">
-	<div id="banner" class="container">
-		<div class="title">
-			<h2>Consectetuer adipiscing elit</h2>
-			<span class="byline">Donec pulvinar ullamcorper metus</span>
-		</div>
-		<ul class="actions"><li><a href="#" class="button">Pulvinar mollis</a></li>
-		</ul></div>
-</div>
-</div>
-<div id="wrapper">
-	<div id="three-column" class="container">
-    
-		<div class="title">
-			<h2>Feugiat lorem ipsum dolor sed veroeros</h2>
-			<span class="byline">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue</span>
-		</div>
-		<div class="boxA">
-			<p>Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad  torquent per conubia nostra.</p>
-			<a href="#" class="button button-alt">More Info</a>
-		</div>
-		<div class="boxB">
-			<p>Etiam neque. Vivamus consequat lorem at nisl. Nullam  wisi a sem semper eleifend. Donec mattis. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc.</p>
-			<a href="#" class="button button-alt">More Info</a>
-		</div>
-		<div class="boxC">
-			<p> Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc.</p>
-			<a href="#" class="button button-alt">More Info</a>
+<body>
+	<div id="header-wrapper">
+		<div id="header" class="container">
+			<div id="logo">
+				<h1><a href="#" class="language" data-en="Chen Guang Lightbox Co."
+						data-zh="辰光灯箱广告制作公司">辰光灯箱广告制作公司</a></h1>
+			</div>
+			<div id="menu">
+				<ul>
+					<li class="active"><a href="#" accesskey="1" title="" class="language" data-en="Homepage"
+							data-zh="首页">首页</a></li>
+					<li><a href="#" accesskey="2" title="" class="language" data-en="Our Clients"
+							data-zh="我们的客户">我们的客户</a></li>
+					<li><a href="#" accesskey="3" title="" class="language" data-en="About Us" data-zh="关于我们">关于我们</a>
+					</li>
+					<li><a href="#" accesskey="4" title="" class="language" data-en="Careers" data-zh="职业">职业</a></li>
+					<li><a href="#" accesskey="5" title="" class="language" data-en="Contact Us" data-zh="联系我们">联系我们</a>
+					</li>
+				</ul>
+			</div>
+			<div class="language-switcher">
+				<input type="checkbox" id="language-toggle">
+			</div>
 		</div>
 	</div>
-</div>
-<div id="welcome">
-	<div class="container">
-		<div class="title">
-			<h2>Fusce ultrices fringilla metus</h2>
-			<span class="byline">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue</span>
+	<div id="banner-wrapper">
+		<div id="banner" class="container">
+			<div class="title">
+				<h2 class="language" data-en="Chen Guang Lightbox Advertising Production Co." data-zh="辰光灯箱广告制作公司">
+					辰光灯箱广告制作公司</h2>
+				<span class="byline language" data-en="Buttons" data-zh="按钮">按钮</span>
+			</div>
+			<ul class="actions">
+				<li><a href="#" class="button language" data-en="More Info" data-zh="更多信息">Pulvinar mollis</a></li>
+			</ul>
 		</div>
-        <img src="images/pic02.jpg" alt="" class="image image-full" width="1500" height="400"><p>This is <strong>FirstBase</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
-		<ul class="actions"><li><a href="#" class="button">Etiam posuere</a></li>
-		</ul></div>
-</div>
-<div id="copyright" class="container">
-	Design by: <a href="https://templated.co/">TEMPLATED.CO</a>
-</div>
-</body></html>
+	</div>
+	<div id="wrapper">
+		<div id="three-column" class="container">
+			<div class="title">
+				<h2 class="language" data-en="Chen Guang Lightbox Advertising Production Co." data-zh="辰光灯箱广告制作公司">
+					辰光灯箱广告制作公司</h2>
+				<span class="byline language"
+					data-en="Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue"
+					data-zh="Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue">Donec leo,
+					vivamus fermentum nibh in augue praesent a lacus at urna congue</span>
+			</div>
+			<div class="boxA">
+				<p class="language"
+					data-en="Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad torquent per conubia nostra."
+					data-zh="Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad torquent per conubia nostra.">
+					Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris
+					quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad torquent per
+					conubia nostra.</p>
+				<a href="#" class="button button-alt language" data-en="More Info" data-zh="更多信息">More Info</a>
+			</div>
+			<div class="boxB">
+				<p class="language"
+					data-en="Etiam neque. Vivamus consequat lorem at nisl. Nullam wisi a sem semper eleifend. Donec mattis. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc."
+					data-zh="Etiam neque. Vivamus consequat lorem at nisl. Nullam wisi a sem semper eleifend. Donec mattis. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc.">
+					Etiam neque. Vivamus consequat lorem at nisl. Nullam wisi a sem semper eleifend. Donec mattis.
+					Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris
+					quis nunc.</p>
+				<a href="#" class="button button-alt language" data-en="More Info" data-zh="更多信息">More Info</a>
+			</div>
+			<div class="boxC">
+				<p class="language"
+					data-en="Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc."
+					data-zh="Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc.">
+					Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus.
+					Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris
+					quis nunc.</p>
+				<a href="#" class="button button-alt language" data-en="More Info" data-zh="更多信息">More Info</a>
+			</div> 
+		</div>
+	</div>
+	<div id="welcome">
+		<div class="container">
+			<div class="title">
+				<h2 class="language" data-en="Chen Guang Lightbox Advertising Production" data-zh="辰光灯箱广告制作">辰光灯箱广告制作
+				</h2>
+				<span class="byline language" data-en="Chen Guang Lightbox Advertising Production"
+					data-zh="辰光灯箱广告制作">辰光灯箱广告制作</span>
+			</div>
+			<img src="images/pic01.jpg" alt="" class="image image-full" width="1500" height="400">
+			<p class="language"
+				data-en="This is <strong>FirstBase</strong>, a free, fully standards-compliant CSS template designed by <a href='http://templated.co' rel='nofollow'>TEMPLATED</a>. The photos in this template are from <a href='http://fotogrph.com/'>Fotogrph</a>. This free template is released under the <a href='http://templated.co/license'>Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :)"
+				data-zh="This is <strong>FirstBase</strong>, a free, fully standards-compliant CSS template designed by <a href='http://templated.co' rel='nofollow'>TEMPLATED</a>. The photos in this template are from <a href='http://fotogrph.com/'>Fotogrph</a>. This free template is released under the <a href='http://templated.co/license'>Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :)">
+				</p>
+			<ul class="actions">
+				<li><a href="#" class="button language" data-en="More Info" data-zh="更多信息">Etiam posuere</a></li>
+			</ul>
+		</div>
+	</div>
+	<div id="copyright" class="container">
+		Design by: JH, inspired
+	</div>
+
+	<script>
+		document.getElementById('language-toggle').addEventListener('change', function () {
+			var language = this.checked ? 'en' : 'zh';
+			var elements = document.querySelectorAll('.language');
+			elements.forEach(function (element) {
+				element.textContent = element.getAttribute('data-' + language);
+			});
+		});
+	</script>
+</body>
+</html>
